added button to index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
 			<h2>Secret Santa App</h2>
 			<p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			<button id="btn-right">Buy Now</button>
 		</div>
 		
 	</div>
@@ -30,3 +31,5 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
+<footer>Copyright © 2014 Kelsey MacMillan Designs. All rights reserved.</footer>
